--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,33 @@ language: node_js
 node_js:
   - 12.9.1
 
+branches:
+  only:
+    - master
+
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
+
+before_script:
+  - yarn global add @angular/cli
 
 cache:
+  yarn: true
   directories:
-    - ./node_modules
-
-install:
-  - npm install
+    - node_modules
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - ng lint
+  - ng test --watch=false
+  - ng build --prod
+  - cd ./dist/timely
+  - cp index.html 404.html
+
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: ./dist/timely/
+  on:
