--- a/package.json
+++ b/package.json
@@ -12,51 +12,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.11",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.11",
-    "@angular/compiler": "^8.2.11",
-    "@angular/core": "^8.2.11",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^8.2.11",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.11",
-    "@angular/platform-browser-dynamic": "^8.2.11",
-    "@angular/router": "^8.2.11",
-    "@auth0/angular-jwt": "^3.0.0",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@auth0/angular-jwt": "^3.0.1",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.6.10",
+    "core-js": "^2.6.11",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
-    "ngx-cookie-service": "^2.2.0",
+    "ngx-cookie-service": "^2.3.0",
     "ngx-timer": "^1.0.6",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.5.4",
     "simple-sidenav": "^1.1.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.12",
-    "@angular/cli": "^8.3.12",
-    "@angular/compiler-cli": "^8.2.11",
-    "@angular/language-service": "^8.2.11",
+    "@angular-devkit/build-angular": "^0.803.22",
+    "@angular/cli": "^8.3.22",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "chai": "^4.2.0",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "mocha": "^6.2.2",
+    "nyc": "^15.0.0",
     "phantomjs-prebuilt": "^2.1.16",
     "protractor": "~5.4.0",
     "sonar-scanner": "^3.1.0",
